@@ -1,5 +1,14 @@
 2009-04-24  Claudio Saavedra  <csaavedra@igalia.com>
 
+	* src/hildon-gtk.c (+set_flag): new generic method to
+	set/delay a flag setting in a window.
+	(hildon_gtk_window_set_progress_indicator):
+	(hildon_gtk_window_set_do_not_disturb),
+	(hildon_gtk_window_set_portrait_flags): use set_flag() to
+	avoid code redundance.
+
+2009-04-24  Claudio Saavedra  <csaavedra@igalia.com>
+
 	Based on a patch by Alberto Garcia (agarcia@igalia.com)
 
 	* src/hildon-gtk.c (set_clear_window_flag),
